# ndae

./: .gitignore  README (1).md  README.md  gitignore  main.py  main_rgb.py  pyproject.toml  requirements.txt
configs/: base.yaml  debug.yaml  full_clay.yaml  full_clay_official_like.yaml  full_clay_official_like_resume.yaml
outputs/lecture09_debug_clay/: config.resolved.yaml
outputs/lecture1_smoke/: config.resolved.yaml
outputs/smoke_run/: config.resolved.yaml
scripts/: download_svbrdf_mini.py  generate_sample_gifs.py  generate_svbrdf_manifest.py  plot_metrics.py  render_svbrdf_example.py  sample_svbrdf.py  train_svbrdf.py
src/ndae/: __init__.py
src/ndae/cli/: __init__.py  _svbrdf_system.py  render_example.py  sample.py  train.py
src/ndae/config/: __init__.py  _parsing.py  errors.py  loader.py  schema.py  validation.py
src/ndae/data/: __init__.py  exemplar.py  sampling.py  timeline.py
src/ndae/evaluation/: __init__.py  runtime.py  sampling.py
src/ndae/losses/: __init__.py  objectives.py  perceptual.py  swd.py
src/ndae/models/: __init__.py  blocks.py  odefunc.py  time_embedding.py  trajectory.py  unet.py
src/ndae/rendering/: __init__.py  brdf.py  geometry.py  maps.py  normal.py  postprocess.py  renderer.py
src/ndae/training/: __init__.py  checkpoint.py  config.py  (+7 more)
tests/: support.py  test_checkpoint.py  test_config.py  test_dataset.py  test_download_svbrdf_mini.py  test_losses.py  test_models.py  test_package_layout.py  test_plot_metrics.py  test_renderer.py  test_sample_cli.py  test_schedule.py  test_smoke.py  test_solver.py  test_trainer.py
(+9 files in other folders)
